--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zoro-be",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "author": "khanhdev",
   "license": "ISC",
   "scripts": {
